# TestTaskQt

./: CMakeLists.txt  DataDecoder.cpp  DataDecoder.h  GraphPainter.cpp  GraphPainter.h  main.cpp  mainwindow.cpp  mainwindow.h
